--- a/Data_Manipulation.html
+++ b/Data_Manipulation.html
@@ -485,6 +485,196 @@ pups_data = janitor::clean_names(pups_data)</code></pre>
 ## 10 #2/2/95/3-2       1       4
 ## # ... with 303 more rows</code></pre>
 </div>
+<div id="filter-observations" class="section level2">
+<h2>Filter observations</h2>
+<p>Do some filtering!!</p>
+<pre class="r"><code>filter(litters_data, gd0_weight &lt; 25)</code></pre>
+<pre><code>## # A tibble: 20 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #85                 19.7        34.7          20               3
+##  2 Mod7  #59                 17          33.4          19               8
+##  3 Mod7  #103                21.4        42.1          19               9
+##  4 Mod7  #4/2/95/2           23.5        NA            19               9
+##  5 Mod7  #5/3/83/5-2         22.6        37            19               5
+##  6 Mod7  #106                21.7        37.8          20               5
+##  7 Mod7  #94/2               24.4        42.9          19               7
+##  8 Mod7  #62                 19.5        35.9          19               7
+##  9 Low7  #84/2               24.3        40.8          20               8
+## 10 Low7  #107                22.6        42.4          20               9
+## 11 Low7  #85/2               22.2        38.5          20               8
+## 12 Low7  #98                 23.8        43.8          20               9
+## 13 Low7  #102                22.6        43.3          20              11
+## 14 Low7  #101                23.8        42.7          20               9
+## 15 Low7  #112                23.9        40.5          19               6
+## 16 Mod8  #97                 24.5        42.8          20               8
+## 17 Low8  #53                 21.8        37.2          20               8
+## 18 Low8  #100                20          39.2          20               8
+## 19 Low8  #4/84               21.8        35.2          20               4
+## 20 Low8  #99                 23.5        39            20               6
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, gd0_weight &gt;= 25)</code></pre>
+<pre><code>## # A tibble: 14 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #1/2/95/2           27          42            19               8
+##  2 Con7  #5/5/3/83/3-3       26          41.4          19               6
+##  3 Con7  #5/4/2/95/2         28.5        44.1          19               5
+##  4 Con8  #3/5/2/2/95         28.5        NA            20               8
+##  5 Con8  #5/4/3/83/3         28          NA            19               9
+##  6 Mod7  #3/82/3-2           28          45.9          20               5
+##  7 Low7  #111                25.5        44.6          20               3
+##  8 Mod8  #7/82-3-2           26.9        43.2          20               7
+##  9 Mod8  #7/110/3-2          27.5        46            19               8
+## 10 Mod8  #2/95/2             28.5        44.5          20               9
+## 11 Mod8  #82/4               33.4        52.7          20               8
+## 12 Low8  #79                 25.4        43.8          19               8
+## 13 Low8  #108                25.6        47.5          20               8
+## 14 Low8  #110                25.5        42.7          20               7
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, pups_born_alive == 8)</code></pre>
+<pre><code>## # A tibble: 16 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #1/2/95/2           27          42            19               8
+##  2 Con8  #2/95/3             NA          NA            20               8
+##  3 Con8  #3/5/2/2/95         28.5        NA            20               8
+##  4 Con8  #3/5/3/83/3-…       NA          NA            20               8
+##  5 Mod7  #59                 17          33.4          19               8
+##  6 Mod7  #3/83/3-2           NA          NA            19               8
+##  7 Low7  #84/2               24.3        40.8          20               8
+##  8 Low7  #85/2               22.2        38.5          20               8
+##  9 Mod8  #97                 24.5        42.8          20               8
+## 10 Mod8  #5/93/2             NA          NA            19               8
+## 11 Mod8  #7/110/3-2          27.5        46            19               8
+## 12 Mod8  #82/4               33.4        52.7          20               8
+## 13 Low8  #53                 21.8        37.2          20               8
+## 14 Low8  #79                 25.4        43.8          19               8
+## 15 Low8  #100                20          39.2          20               8
+## 16 Low8  #108                25.6        47.5          20               8
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, !is.na(gd0_weight))</code></pre>
+<pre><code>## # A tibble: 34 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #85                 19.7        34.7          20               3
+##  2 Con7  #1/2/95/2           27          42            19               8
+##  3 Con7  #5/5/3/83/3-3       26          41.4          19               6
+##  4 Con7  #5/4/2/95/2         28.5        44.1          19               5
+##  5 Con8  #3/5/2/2/95         28.5        NA            20               8
+##  6 Con8  #5/4/3/83/3         28          NA            19               9
+##  7 Mod7  #59                 17          33.4          19               8
+##  8 Mod7  #103                21.4        42.1          19               9
+##  9 Mod7  #3/82/3-2           28          45.9          20               5
+## 10 Mod7  #4/2/95/2           23.5        NA            19               9
+## # ... with 24 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
+## #   pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, group == &quot;Low8&quot; | group == &quot;Low7&quot; )</code></pre>
+<pre><code>## # A tibble: 15 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Low7  #84/2               24.3        40.8          20               8
+##  2 Low7  #107                22.6        42.4          20               9
+##  3 Low7  #85/2               22.2        38.5          20               8
+##  4 Low7  #98                 23.8        43.8          20               9
+##  5 Low7  #102                22.6        43.3          20              11
+##  6 Low7  #101                23.8        42.7          20               9
+##  7 Low7  #111                25.5        44.6          20               3
+##  8 Low7  #112                23.9        40.5          19               6
+##  9 Low8  #53                 21.8        37.2          20               8
+## 10 Low8  #79                 25.4        43.8          19               8
+## 11 Low8  #100                20          39.2          20               8
+## 12 Low8  #4/84               21.8        35.2          20               4
+## 13 Low8  #108                25.6        47.5          20               8
+## 14 Low8  #99                 23.5        39            20               6
+## 15 Low8  #110                25.5        42.7          20               7
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, group %in% c(&quot;Low7&quot;, &quot;Low8&quot;))</code></pre>
+<pre><code>## # A tibble: 15 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Low7  #84/2               24.3        40.8          20               8
+##  2 Low7  #107                22.6        42.4          20               9
+##  3 Low7  #85/2               22.2        38.5          20               8
+##  4 Low7  #98                 23.8        43.8          20               9
+##  5 Low7  #102                22.6        43.3          20              11
+##  6 Low7  #101                23.8        42.7          20               9
+##  7 Low7  #111                25.5        44.6          20               3
+##  8 Low7  #112                23.9        40.5          19               6
+##  9 Low8  #53                 21.8        37.2          20               8
+## 10 Low8  #79                 25.4        43.8          19               8
+## 11 Low8  #100                20          39.2          20               8
+## 12 Low8  #4/84               21.8        35.2          20               4
+## 13 Low8  #108                25.6        47.5          20               8
+## 14 Low8  #99                 23.5        39            20               6
+## 15 Low8  #110                25.5        42.7          20               7
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, pups_born_alive %in% 4:6)</code></pre>
+<pre><code>## # A tibble: 12 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #5/5/3/83/3-3       26          41.4          19               6
+##  2 Con7  #5/4/2/95/2         28.5        44.1          19               5
+##  3 Con7  #4/2/95/3-3         NA          NA            20               6
+##  4 Con7  #2/2/95/3-2         NA          NA            20               6
+##  5 Con8  #2/2/95/2           NA          NA            19               5
+##  6 Mod7  #1/82/3-2           NA          NA            19               6
+##  7 Mod7  #3/82/3-2           28          45.9          20               5
+##  8 Mod7  #5/3/83/5-2         22.6        37            19               5
+##  9 Mod7  #106                21.7        37.8          20               5
+## 10 Low7  #112                23.9        40.5          19               6
+## 11 Low8  #4/84               21.8        35.2          20               4
+## 12 Low8  #99                 23.5        39            20               6
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<pre class="r"><code>filter(litters_data, pups_born_alive %in% 4:7, !is.na(gd0_weight))</code></pre>
+<pre><code>## # A tibble: 12 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 Con7  #5/5/3/83/3-3       26          41.4          19               6
+##  2 Con7  #5/4/2/95/2         28.5        44.1          19               5
+##  3 Mod7  #3/82/3-2           28          45.9          20               5
+##  4 Mod7  #5/3/83/5-2         22.6        37            19               5
+##  5 Mod7  #106                21.7        37.8          20               5
+##  6 Mod7  #94/2               24.4        42.9          19               7
+##  7 Mod7  #62                 19.5        35.9          19               7
+##  8 Low7  #112                23.9        40.5          19               6
+##  9 Mod8  #7/82-3-2           26.9        43.2          20               7
+## 10 Low8  #4/84               21.8        35.2          20               4
+## 11 Low8  #99                 23.5        39            20               6
+## 12 Low8  #110                25.5        42.7          20               7
+## # ... with 2 more variables: pups_dead_birth &lt;int&gt;, pups_survive &lt;int&gt;</code></pre>
+<p>Learning Assessment: Filter to include only pups with sex 1 ; Filter to include only pups with PD walk less than 11 and sex 2</p>
+<pre class="r"><code>filter(pups_data, sex == 1)</code></pre>
+<pre><code>## # A tibble: 155 x 6
+##    litter_number   sex pd_ears pd_eyes pd_pivot pd_walk
+##    &lt;chr&gt;         &lt;int&gt;   &lt;int&gt;   &lt;int&gt;    &lt;int&gt;   &lt;int&gt;
+##  1 #85               1       4      13        7      11
+##  2 #85               1       4      13        7      12
+##  3 #1/2/95/2         1       5      13        7       9
+##  4 #1/2/95/2         1       5      13        8      10
+##  5 #5/5/3/83/3-3     1       5      13        8      10
+##  6 #5/5/3/83/3-3     1       5      14        6       9
+##  7 #5/4/2/95/2       1      NA      14        5       9
+##  8 #4/2/95/3-3       1       4      13        6       8
+##  9 #4/2/95/3-3       1       4      13        7       9
+## 10 #2/2/95/3-2       1       4      NA        8      10
+## # ... with 145 more rows</code></pre>
+<pre class="r"><code>filter(pups_data, pd_walk &lt; 11 &amp; sex == 2)</code></pre>
+<pre><code>## # A tibble: 127 x 6
+##    litter_number   sex pd_ears pd_eyes pd_pivot pd_walk
+##    &lt;chr&gt;         &lt;int&gt;   &lt;int&gt;   &lt;int&gt;    &lt;int&gt;   &lt;int&gt;
+##  1 #1/2/95/2         2       4      13        7       9
+##  2 #1/2/95/2         2       4      13        7      10
+##  3 #1/2/95/2         2       5      13        8      10
+##  4 #1/2/95/2         2       5      13        8      10
+##  5 #1/2/95/2         2       5      13        6      10
+##  6 #5/5/3/83/3-3     2       5      13        8      10
+##  7 #5/5/3/83/3-3     2       5      14        7      10
+##  8 #5/5/3/83/3-3     2       5      14        8      10
+##  9 #5/4/2/95/2       2      NA      14        7      10
+## 10 #5/4/2/95/2       2      NA      14        7      10
+## # ... with 117 more rows</code></pre>
+</div>
 
 
 
