--- a/Data_Manipulation.html
+++ b/Data_Manipulation.html
@@ -752,6 +752,88 @@ pups_data = janitor::clean_names(pups_data)</code></pre>
 ## # ... with 39 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
 ## #   pups_survive &lt;int&gt;</code></pre>
 </div>
+<div id="piping" class="section level2">
+<h2>Piping !!</h2>
+<p>Look at intermediate object approach:</p>
+<pre class="r"><code>litters_data_raw = read_csv(&quot;./data/FAS_litters.csv&quot;,
+  col_types = &quot;ccddiiii&quot;)
+litters_data_clean_names = janitor::clean_names(litters_data_raw)
+litters_data_selected_cols = select(litters_data_clean_names, -pups_survive)
+litters_data_with_vars = mutate(litters_data_selected_cols, 
+  wt_gain = gd18_weight - gd0_weight,
+  group = tolower(group))
+litters_data_with_vars</code></pre>
+<pre><code>## # A tibble: 49 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 con7  #85                 19.7        34.7          20               3
+##  2 con7  #1/2/95/2           27          42            19               8
+##  3 con7  #5/5/3/83/3-3       26          41.4          19               6
+##  4 con7  #5/4/2/95/2         28.5        44.1          19               5
+##  5 con7  #4/2/95/3-3         NA          NA            20               6
+##  6 con7  #2/2/95/3-2         NA          NA            20               6
+##  7 con7  #1/5/3/83/3-…       NA          NA            20               9
+##  8 con8  #3/83/3-3           NA          NA            20               9
+##  9 con8  #2/95/3             NA          NA            20               8
+## 10 con8  #3/5/2/2/95         28.5        NA            20               8
+## # ... with 39 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
+## #   wt_gain &lt;dbl&gt;</code></pre>
+<p>Use nested function calls:</p>
+<pre class="r"><code>litters_data_clean = 
+  mutate(
+    select(
+      janitor::clean_names(
+        read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;)
+        ), 
+    -pups_survive
+    ),
+  wt_gain = gd18_weight - gd0_weight,
+  group = tolower(group)
+  )
+litters_data_clean</code></pre>
+<pre><code>## # A tibble: 49 x 8
+##    group litter_number gd0_weight gd18_weight gd_of_birth pups_born_alive
+##    &lt;chr&gt; &lt;chr&gt;              &lt;dbl&gt;       &lt;dbl&gt;       &lt;int&gt;           &lt;int&gt;
+##  1 con7  #85                 19.7        34.7          20               3
+##  2 con7  #1/2/95/2           27          42            19               8
+##  3 con7  #5/5/3/83/3-3       26          41.4          19               6
+##  4 con7  #5/4/2/95/2         28.5        44.1          19               5
+##  5 con7  #4/2/95/3-3         NA          NA            20               6
+##  6 con7  #2/2/95/3-2         NA          NA            20               6
+##  7 con7  #1/5/3/83/3-…       NA          NA            20               9
+##  8 con8  #3/83/3-3           NA          NA            20               9
+##  9 con8  #2/95/3             NA          NA            20               8
+## 10 con8  #3/5/2/2/95         28.5        NA            20               8
+## # ... with 39 more rows, and 2 more variables: pups_dead_birth &lt;int&gt;,
+## #   wt_gain &lt;dbl&gt;</code></pre>
+<p>Use piping:</p>
+<pre class="r"><code>litters_data =
+  read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;% 
+  janitor::clean_names() %&gt;% 
+  select(-pups_survive) %&gt;% 
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = tolower(group)
+  ) %&gt;% 
+  filter(!is.na(gd0_weight))</code></pre>
+<p>Illustrate placeholder use with ‘lm’ (linear model):</p>
+<pre class="r"><code>read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;% 
+  janitor::clean_names() %&gt;% 
+  select(-pups_survive) %&gt;% 
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = tolower(group)
+  ) %&gt;% 
+  filter(!is.na(gd0_weight)) %&gt;% 
+  lm(gd18_weight ~ gd0_weight, data = .)</code></pre>
+<pre><code>## 
+## Call:
+## lm(formula = gd18_weight ~ gd0_weight, data = .)
+## 
+## Coefficients:
+## (Intercept)   gd0_weight  
+##      15.342        1.084</code></pre>
+</div>
 
 
 
