--- a/tidy_data.html
+++ b/tidy_data.html
@@ -313,8 +313,60 @@ $(document).ready(function () {
 </div>
 
 
-<div id="import-fas-csv-files" class="section level2">
-<h2>Import FAS csv files</h2>
+<div id="gather" class="section level2">
+<h2>gather</h2>
+<p>PULSE data</p>
+<pre class="r"><code>pulse_data = haven::read_sas(&quot;./data/public_pulse_data.sas7bdat&quot;) %&gt;%
+  janitor::clean_names()
+pulse_data</code></pre>
+<pre><code>## # A tibble: 1,087 x 7
+##       id   age sex  bdi_score_bl bdi_score_01m bdi_score_06m bdi_score_12m
+##    &lt;dbl&gt; &lt;dbl&gt; &lt;ch&gt;        &lt;dbl&gt;         &lt;dbl&gt;         &lt;dbl&gt;         &lt;dbl&gt;
+##  1 10003  48.0 male            7             1             2             0
+##  2 10015  72.5 male            6            NA            NA            NA
+##  3 10022  58.5 male           14             3             8            NA
+##  4 10026  72.7 male           20             6            18            16
+##  5 10035  60.4 male            4             0             1             2
+##  6 10050  84.7 male            2            10            12             8
+##  7 10078  31.3 male            4             0            NA            NA
+##  8 10088  56.9 male            5            NA             0             2
+##  9 10091  76.0 male            0             3             4             0
+## 10 10092  74.2 fem…           10             2            11             6
+## # ... with 1,077 more rows</code></pre>
+<p>This isn’t tidy yet…</p>
+<pre class="r"><code>pulse_tidy = pulse_data %&gt;% 
+  gather(key = &quot;visit&quot;, value = &quot;bdi_score&quot;, bdi_score_bl:bdi_score_12m)</code></pre>
+<pre><code>## Warning: attributes are not identical across measure variables;
+## they will be dropped</code></pre>
+<p>Illustrate <code>seperate</code>:</p>
+<pre class="r"><code>pulse_tidy %&gt;% 
+  separate(visit, into = c(&quot;bdi_str&quot;, &quot;score_str&quot;, &quot;visit&quot;), sep = &quot;_&quot;) %&gt;% 
+  select(-bdi_str, -score_str) %&gt;% 
+  mutate(visit = replace(visit, visit == &quot;bl&quot;, &quot;00m&quot;))</code></pre>
+<pre><code>## # A tibble: 4,348 x 5
+##       id   age sex    visit bdi_score
+##    &lt;dbl&gt; &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;     &lt;dbl&gt;
+##  1 10003  48.0 male   00m           7
+##  2 10015  72.5 male   00m           6
+##  3 10022  58.5 male   00m          14
+##  4 10026  72.7 male   00m          20
+##  5 10035  60.4 male   00m           4
+##  6 10050  84.7 male   00m           2
+##  7 10078  31.3 male   00m           4
+##  8 10088  56.9 male   00m           5
+##  9 10091  76.0 male   00m           0
+## 10 10092  74.2 female 00m          10
+## # ... with 4,338 more rows</code></pre>
+<p>All together, the data import / cleaning pipeline is:</p>
+<pre class="r"><code>pulse_df =  
+  haven::read_sas(&quot;./data/public_pulse_data.sas7bdat&quot;) %&gt;%
+  janitor::clean_names() %&gt;% 
+  gather(key = &quot;visit&quot;, value = &quot;bdi_score&quot;, bdi_score_bl:bdi_score_12m) %&gt;% 
+  separate(visit, into = c(&quot;bdi_str&quot;, &quot;score_str&quot;, &quot;visit&quot;), sep = &quot;_&quot;) %&gt;% 
+  select(-bdi_str, -score_str) %&gt;% 
+  mutate(visit = replace(visit, visit == &quot;bl&quot;, &quot;00m&quot;))</code></pre>
+<pre><code>## Warning: attributes are not identical across measure variables;
+## they will be dropped</code></pre>
 </div>
 
 
