--- a/tidy_data.html
+++ b/tidy_data.html
@@ -338,7 +338,10 @@ pulse_data</code></pre>
   gather(key = &quot;visit&quot;, value = &quot;bdi_score&quot;, bdi_score_bl:bdi_score_12m)</code></pre>
 <pre><code>## Warning: attributes are not identical across measure variables;
 ## they will be dropped</code></pre>
-<p>Illustrate <code>seperate</code>:</p>
+</div>
+<div id="separate" class="section level2">
+<h2>separate</h2>
+<p>Illustrate <code>separate</code>:</p>
 <pre class="r"><code>pulse_tidy %&gt;% 
   separate(visit, into = c(&quot;bdi_str&quot;, &quot;score_str&quot;, &quot;visit&quot;), sep = &quot;_&quot;) %&gt;% 
   select(-bdi_str, -score_str) %&gt;% 
@@ -367,6 +370,55 @@ pulse_data</code></pre>
   mutate(visit = replace(visit, visit == &quot;bl&quot;, &quot;00m&quot;))</code></pre>
 <pre><code>## Warning: attributes are not identical across measure variables;
 ## they will be dropped</code></pre>
+</div>
+<div id="revisit-fas_litters" class="section level2">
+<h2>Revisit FAS_litters</h2>
+<pre class="r"><code>litters_data = read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;% 
+  janitor::clean_names() %&gt;% 
+  separate(group, into = c(&quot;dose&quot;, &quot;day&quot;), 3)</code></pre>
+</div>
+<div id="learning-assessment" class="section level2">
+<h2>Learning Assessment</h2>
+<pre class="r"><code>litters_la = read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccddiiii&quot;) %&gt;% 
+  janitor::clean_names() %&gt;% 
+  select(litter_number, gd0_weight, gd18_weight) %&gt;% 
+  gather(key = &quot;gest_day&quot;, value = &quot;weight&quot;, gd0_weight:gd18_weight) %&gt;% 
+  mutate(gest_day = recode(gest_day, &quot;gd0_weight&quot; = 0, &quot;gd18_weight&quot; = 18)) %&gt;% 
+  arrange(litter_number)</code></pre>
+</div>
+<div id="spread" class="section level2">
+<h2>spread</h2>
+<p>Create <code>analysis_result</code>:</p>
+<pre class="r"><code>analysis_result = tibble(
+  group = c(&quot;treatment&quot;, &quot;treatment&quot;, &quot;placebo&quot;, &quot;placebo&quot;),
+  time = c(&quot;pre&quot;, &quot;post&quot;, &quot;pre&quot;, &quot;post&quot;),
+  mean = c(4, 8, 3.5, 4)
+)</code></pre>
+<p>Make it readable:</p>
+<pre class="r"><code>analysis_result %&gt;% 
+  spread(key = time, value = mean) %&gt;% 
+  knitr::kable()</code></pre>
+<table>
+<thead>
+<tr class="header">
+<th align="left">group</th>
+<th align="right">post</th>
+<th align="right">pre</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">placebo</td>
+<td align="right">4</td>
+<td align="right">3.5</td>
+</tr>
+<tr class="even">
+<td align="left">treatment</td>
+<td align="right">8</td>
+<td align="right">4.0</td>
+</tr>
+</tbody>
+</table>
 </div>
 
 
