--- a/tidy_data.html
+++ b/tidy_data.html
@@ -475,22 +475,92 @@ litter_data = read_csv(&quot;./data/FAS_litters.csv&quot;, col_types = &quot;ccd
 <pre class="r"><code>fas_data = left_join(pup_data, litter_data, by = &quot;litter_number&quot;)</code></pre>
 <p>Learning Assessment: The datasets in this zip file contain de-identified responses to surveys included in Homeworks 0 and 1. Both contain a unique student identifier; the first has reponses to a question about operating systems, and the second has responses to questions about degree program and git experience. Write a code chunk that imports and cleans both datasets, and then joins them.</p>
 <pre class="r"><code>os_data = read_csv(&quot;./survey_results/surv_os.csv&quot;) %&gt;%
-  janitor::clean_names()</code></pre>
+  janitor::clean_names() %&gt;% 
+  rename(id = what_is_your_uni, os = what_operating_system_do_you_use)</code></pre>
 <pre><code>## Parsed with column specification:
 ## cols(
 ##   `What is your UNI?` = col_character(),
 ##   `What operating system do you use?` = col_character()
 ## )</code></pre>
 <pre class="r"><code>prog_git_data = read_csv(&quot;./survey_results/surv_program_git.csv&quot;) %&gt;% 
-  janitor::clean_names()</code></pre>
+  janitor::clean_names() %&gt;% 
+  rename(id = what_is_your_uni, 
+         prog = what_is_your_degree_program,
+         git_exp = which_most_accurately_describes_your_experience_with_git)</code></pre>
 <pre><code>## Parsed with column specification:
 ## cols(
 ##   `What is your UNI?` = col_character(),
 ##   `What is your degree program?` = col_character(),
 ##   `Which most accurately describes your experience with Git?` = col_character()
 ## )</code></pre>
-<pre class="r"><code>surv_data = left_join(os_data, prog_git_data)</code></pre>
-<pre><code>## Joining, by = &quot;what_is_your_uni&quot;</code></pre>
+<pre class="r"><code>left_join(os_data, prog_git_data)</code></pre>
+<pre><code>## Joining, by = &quot;id&quot;</code></pre>
+<pre><code>## # A tibble: 175 x 4
+##    id        os       prog  git_exp                                       
+##    &lt;chr&gt;     &lt;chr&gt;    &lt;chr&gt; &lt;chr&gt;                                         
+##  1 student_… &lt;NA&gt;     MS    Pretty smooth: needed some work to connect Gi…
+##  2 student_… Windows… Other Pretty smooth: needed some work to connect Gi…
+##  3 student_… Mac OS X MPH   Smooth: installation and connection with GitH…
+##  4 student_… Windows… MS    Smooth: installation and connection with GitH…
+##  5 student_… Mac OS X MS    Smooth: installation and connection with GitH…
+##  6 student_… Mac OS X MS    Smooth: installation and connection with GitH…
+##  7 student_… Windows… MPH   Pretty smooth: needed some work to connect Gi…
+##  8 student_… Windows… MPH   Pretty smooth: needed some work to connect Gi…
+##  9 student_… Windows… MPH   Pretty smooth: needed some work to connect Gi…
+## 10 student_… Mac OS X &lt;NA&gt;  &lt;NA&gt;                                          
+## # ... with 165 more rows</code></pre>
+<pre class="r"><code>inner_join(os_data, prog_git_data)</code></pre>
+<pre><code>## Joining, by = &quot;id&quot;</code></pre>
+<pre><code>## # A tibble: 129 x 4
+##    id        os       prog  git_exp                                       
+##    &lt;chr&gt;     &lt;chr&gt;    &lt;chr&gt; &lt;chr&gt;                                         
+##  1 student_… &lt;NA&gt;     MS    Pretty smooth: needed some work to connect Gi…
+##  2 student_… Windows… Other Pretty smooth: needed some work to connect Gi…
+##  3 student_… Mac OS X MPH   Smooth: installation and connection with GitH…
+##  4 student_… Windows… MS    Smooth: installation and connection with GitH…
+##  5 student_… Mac OS X MS    Smooth: installation and connection with GitH…
+##  6 student_… Mac OS X MS    Smooth: installation and connection with GitH…
+##  7 student_… Windows… MPH   Pretty smooth: needed some work to connect Gi…
+##  8 student_… Windows… MPH   Pretty smooth: needed some work to connect Gi…
+##  9 student_… Windows… MPH   Pretty smooth: needed some work to connect Gi…
+## 10 student_… Windows… MPH   Smooth: installation and connection with GitH…
+## # ... with 119 more rows</code></pre>
+<pre class="r"><code>anti_join(os_data, prog_git_data)</code></pre>
+<pre><code>## Joining, by = &quot;id&quot;</code></pre>
+<pre><code>## # A tibble: 46 x 2
+##    id          os                                     
+##    &lt;chr&gt;       &lt;chr&gt;                                  
+##  1 student_86  Mac OS X                               
+##  2 student_91  Windows 10                             
+##  3 student_24  Mac OS X                               
+##  4 student_103 Mac OS X                               
+##  5 student_163 Mac OS X                               
+##  6 student_68  Other (Linux, Windows, 95, TI-89+, etc)
+##  7 student_158 Mac OS X                               
+##  8 student_19  Windows 10                             
+##  9 student_43  Mac OS X                               
+## 10 student_78  Mac OS X                               
+## # ... with 36 more rows</code></pre>
+<pre class="r"><code>anti_join(prog_git_data, os_data)</code></pre>
+<pre><code>## Joining, by = &quot;id&quot;</code></pre>
+<pre><code>## # A tibble: 15 x 3
+##    id        prog  git_exp                                                
+##    &lt;chr&gt;     &lt;chr&gt; &lt;chr&gt;                                                  
+##  1 &lt;NA&gt;      MPH   Pretty smooth: needed some work to connect Git, GitHub…
+##  2 student_… PhD   Pretty smooth: needed some work to connect Git, GitHub…
+##  3 &lt;NA&gt;      MPH   Pretty smooth: needed some work to connect Git, GitHub…
+##  4 &lt;NA&gt;      MPH   Pretty smooth: needed some work to connect Git, GitHub…
+##  5 &lt;NA&gt;      MS    Pretty smooth: needed some work to connect Git, GitHub…
+##  6 student_… MS    Pretty smooth: needed some work to connect Git, GitHub…
+##  7 &lt;NA&gt;      MS    Smooth: installation and connection with GitHub was ea…
+##  8 student_… PhD   Pretty smooth: needed some work to connect Git, GitHub…
+##  9 student_… MPH   Smooth: installation and connection with GitHub was ea…
+## 10 student_… MS    Smooth: installation and connection with GitHub was ea…
+## 11 &lt;NA&gt;      MS    Pretty smooth: needed some work to connect Git, GitHub…
+## 12 &lt;NA&gt;      MS    &quot;What's \&quot;Git\&quot; ...?&quot;                                  
+## 13 &lt;NA&gt;      MS    Smooth: installation and connection with GitHub was ea…
+## 14 &lt;NA&gt;      MPH   Pretty smooth: needed some work to connect Git, GitHub…
+## 15 &lt;NA&gt;      MS    Pretty smooth: needed some work to connect Git, GitHub…</code></pre>
 </div>
 
 
